Refresh appearance of omnibox results when native theme changes.

Previous to this patch, the render texts were created just once.
In some cases that was before the view was actually added to a widget
hierarchy and therefore GetNativeTheme returned the wrong thing. This
only affects GTK theme mode because on all other platforms, there's only
ever one NativeTheme. (Incognito does use a different NativeTheme as
well but this only affected suggestions which we don't provide in
incognito.)

BUG=672226

Review-Url: https://codereview.chromium.org/2578443002
Cr-Commit-Position: refs/heads/master@{#438418}

Former-commit-id: cfd026f99e1868040b970891ba75d9394c5b8efa